--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf_8">
-    <title>Project:CV numerique</title>
-  </head>
-  <body>
-    
-    <h1>Mon CV numérique</h1>
-  </body>
+<head>
+    <meta charset="utf-8" />
+    <!-- Le titre est mis dans l'onglet du navigateur et dans les résultat de recheche de google' -->
+    <title>CV numérique développeur web Jean-Jacques Valmont</title>
+</head>
+
+    <body>
+        <p>Fabrication de jeux d’échecs personnalisés au moyen d'une imprimante 3D et du logiciel de création 3D Tinkercad avec des enfants ayant entre 6 et 11 ans.</p>
+    </body>
+</html>
