Update présentation/partie description

--- a/index.html
+++ b/index.html
@@ -63,7 +63,16 @@
           <img src="assets/image/Photo_de_profil_JJ_miniature.JPG" alt="Photo de profil représentant Jean-Jacques Valmont" class="border border-dark m-3">
         </div>
         <div class="col-lg-9 p-5">
-          <p> Je me présente: Jean-Jacques Valmont, 27 ans et actuellement en recherche d'emploi en tant que développeur web. </p>
+          <p> Je me présente: Jean-Jacques Valmont, 27 ans et actuellement en recherche d'emploi en tant que <span class="text-bold">développeur web</span>. </p>
+           <p> Pourquoi <span class="text-bold">développeur web</span> ? C'est simple, je veux faire un travail avec lequel chaque projet est différent et pouvoir 
+            apprendre tous les jours car c'est un secteur qui est toujours en évolution.
+            C'est durant mon dernier travail en tant qu'animateur numérique que, j'ai voulu aller plus loin dans la compréhension 
+            du numérique mais aussi la création de celui-ci. C'est pour cela que j'ai mis fin à mon contrat afin de trouver un 
+            travail qui me permettra de m'épanouir dans ma vie professionnelle. </p>
+            <p>Je recherche donc une entreprise avec qui je pourrais faire  <span class="text-bold">mes preuves en alternance</span> 
+              et montrer ma volonté et mon engagement sur les projets qui me seront confiés.</p>
+            <p>Je suis disponible sur le secteur de l'Oise et de l'Île-de-france (mais je suis toujours à l'écoute de toute proposition où qu'elle soit). </p>
+            <p>Je vous remercie pour le temps que vous allez consacrer à la découverte de mon parcours.</p>
         </div>
       </div>
     </div>
